<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/music_languages"
        android:icon="@drawable/ic_music_notes_icon"
        android:title="@string/music_languages" />

    <item
        android:id="@+id/display_theme"
        android:icon="@drawable/ic_display_theme_icon"
        android:title="@string/display_theme" />

    <item
        android:id="@+id/account_settings"
        android:icon="@drawable/ic_settings_icon"
        android:title="@string/settings" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications_icon"
        android:title="@string/notififcations" />

    <item
        android:id="@+id/terms_privacy"
        android:icon="@drawable/ic_terms_privacy_icon"
        android:title="@string/terms_privacy" />

    <item
        android:id="@+id/help_faq"
        android:icon="@drawable/ic_help_faq_icon"
        android:title="@string/help_and_faq" />

    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_logout_icon"
        android:title="@string/log_out" />

</menu>