<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.TermsPrivacyScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="30dp"
        android:layout_marginTop="20dp"
        >

    <TextView
        android:id="@+id/terms_policy_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_privacy"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/terms_policy_welcome_note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_privacy_welcome_note"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/terms_policy_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/acceptance_of_terms_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acceptance_of_terms"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/terms_policy_welcome_note_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/acceptance_of_terms_content_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acceptance_of_terms_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/acceptance_of_terms_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/use_of_app_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_of_app"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/acceptance_of_terms_content_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/use_of_app_content_1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_of_app_content_1"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/use_of_app_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/use_of_app_content_2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_of_app_content_2"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/use_of_app_content_1_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/use_of_app_content_3_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_of_app_content_3"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/use_of_app_content_2_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/account_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_information"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/use_of_app_content_3_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/account_information_content_1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_information_content_1"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/account_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/account_information_content_2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_information_content_2"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/account_information_content_1_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/content_copyright_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_and_copyright"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/account_information_content_2_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/content_copyright_content_1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_and_copyright_content_1"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/content_copyright_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/content_copyright_content_2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_and_copyright_content_2"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/content_copyright_content_1_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/privacy_policy_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/content_copyright_content_2_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/privacy_policy_content_1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_content_1"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/privacy_policy_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/privacy_policy_content_2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_content_2"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/privacy_policy_content_1_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/subscriptions_payments_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscriptions_and_payments"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/privacy_policy_content_2_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/subscriptions_payments_content_1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscriptions_and_payments_content_1"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/subscriptions_payments_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/subscriptions_payments_content_2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscriptions_and_payments_content_2"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/subscriptions_payments_content_1_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/third_party_links_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_party_links"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/subscriptions_payments_content_2_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/third_party_links_content_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_party_links_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/third_party_links_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/termination_of_use_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/termination_of_use"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/third_party_links_content_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/termination_of_use_content_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/termination_of_use_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/termination_of_use_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/limitation_of_liability_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limitation_of_liability"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/termination_of_use_content_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/limitation_of_liability_content_1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limitation_of_liability_content_1"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/limitation_of_liability_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/limitation_of_liability_content_2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limitation_of_liability_content_2"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/limitation_of_liability_content_1_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/limitation_of_liability_content_3_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limitation_of_liability_content_3"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/limitation_of_liability_content_2_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/changes_to_terms_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changes_to_terms"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/limitation_of_liability_content_3_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/changes_to_terms_content_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changes_to_terms_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/changes_to_terms_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/changes_to_terms_content_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/support_mail_note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support_mail_note"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/changes_to_terms_content_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/thankyou_note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thankyou_note"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/support_mail_note_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>